--- a/style.css
+++ b/style.css
@@ -5,17 +5,39 @@ body {
 }
 
 img {
-    width: auto;
-    height: 100px;
+    width: 100%;
+    height: auto;
 }
 
+#title-image {
+    width: auto;
+    height: 100%;
+}
+
+.logo-text {
+    font-size: 24px;
+    color: #f9faf8;
+
+}
+
+.title {
+    font-size: 48px;
+    font-weight: bolder;
+    color: #f9faf8;
+}
 ul {
+    font-size: 18px;
+    color: #e5e7eb;
     display: flex;
     list-style: none; 
     gap: 8px;
 }
 
 .header {
+    background-color: #1F2937;
+    padding-left: 60px;
+    padding-right: 60px;
+    padding-bottom: 70px;
     display: flex;
     flex-direction: column;
 }
@@ -24,4 +46,75 @@ ul {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-left: 50px;
+    margin-right: 50px;
 }
+
+.top{
+    display: flex;
+    align-items: center;
+    gap: 16px;
+    margin: 50px;
+}
+.header-info {
+    display: flex;
+    flex-direction: column;
+    color: #e5e7eb;
+    gap: 16px;
+}
+
+button {
+    width: 80px;
+    background-color: #3882f6;
+    color: #e5e7eb;
+    font-weight: 800;
+    border-radius: 4px;
+    border: none;
+    padding: 6px;
+}
+
+.content-title {
+    text-align: center;
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1F2937;
+}
+
+.content {
+    display: flex;
+    padding: 16px;
+    gap: 16px
+}
+
+.info {
+    max-width: 200px;
+}
+
+.quote {
+    display: flex;
+    background-color: #e5e7eb;
+    font-size: 36px;
+    color: #1f2937;
+    font-style: italic;
+    font-weight:200;
+    padding: 100px;
+  }
+
+  .action{
+    background-color: #3882f6;
+    color: #f9faf8;
+    display: flex;
+    justify-content: space-around;
+    padding: 24px;
+    margin: 125px;
+}
+
+
+  .footer{
+    display: flex;
+    background-color: #1F2937;
+    color: #e5e7eb;
+    align-items: center;
+    justify-content: center;
+    padding: 24px;
+  }
